{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 210,
  "lineage": "4ec2e58b-fe02-a2dd-6418-0b8d1465a94b",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/networkSecurityGroups/AKS-PROD",
            "location": "canadacentral",
            "name": "AKS-PROD",
            "resource_group_name": "tf-aks-networking-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInbound-BasicRule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DenyOutBound-BasicRule",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "appName": "testApp",
              "environment": "dev",
              "orchestrator": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "DenyInbound-BasicRule",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/networkSecurityGroups/AKS-PROD/securityRules/DenyInbound-BasicRule",
            "name": "DenyInbound-BasicRule",
            "network_security_group_name": "AKS-PROD",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "tf-aks-networking-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.this",
            "module.networking.azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "DenyOutBound-BasicRule",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/networkSecurityGroups/AKS-PROD/securityRules/DenyOutBound-BasicRule",
            "name": "DenyOutBound-BasicRule",
            "network_security_group_name": "AKS-PROD",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "tf-aks-networking-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.this",
            "module.networking.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "prod-aks-subnet01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-aks-subnet01",
            "name": "prod-aks-subnet01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-aks-networking-rg",
            "virtual_network_name": "tf-aks-vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.this",
            "module.networking.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "prod-user-subnet01",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.1.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-user-subnet01",
            "name": "prod-user-subnet01",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-aks-networking-rg",
            "virtual_network_name": "tf-aks-vnet01"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.this",
            "module.networking.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "prod-aks-subnet01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-aks-subnet01",
            "network_security_group_id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/networkSecurityGroups/AKS-PROD",
            "subnet_id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-aks-subnet01"
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.this",
            "module.networking.azurerm_resource_group.this",
            "module.networking.azurerm_subnet.this",
            "module.networking.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "prod-user-subnet01",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-user-subnet01",
            "network_security_group_id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/networkSecurityGroups/AKS-PROD",
            "subnet_id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-user-subnet01"
          },
          "dependencies": [
            "module.networking.azurerm_network_security_group.this",
            "module.networking.azurerm_resource_group.this",
            "module.networking.azurerm_subnet.this",
            "module.networking.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "100.0.0.0/8"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eb07a19e-57dc-4c60-8c7b-13154fd4a0ce",
            "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01",
            "location": "canadacentral",
            "name": "tf-aks-vnet01",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "tf-aks-networking-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "100.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-aks-subnet01",
                "name": "prod-aks-subnet01",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/networkSecurityGroups/AKS-PROD"
              },
              {
                "address_prefixes": [
                  "100.1.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/virtualNetworks/tf-aks-vnet01/subnets/prod-user-subnet01",
                "name": "prod-user-subnet01",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/860e5706-a4d0-4c7c-89c9-4bd4aaeee4ad/resourceGroups/tf-aks-networking-rg/providers/Microsoft.Network/networkSecurityGroups/AKS-PROD"
              }
            ],
            "tags": {
              "appName": "testApp",
              "environment": "dev",
              "orchestrator": "terraform"
            }
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}